syntax = "proto3";

enum RoleType {
	FIGHTER		= 0;
	BOWMAN		= 1;
    MAGICIAN	= 2;
}